<resources>
    <string name="app_name">NeWork</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="author_avatar">Author avatar</string>
    <string name="post_menu">Post menu</string>
    <string name="attachment_card">Attachment card</string>
    <string name="like_button">Like button</string>
    <string name="share_button">Share button</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="person_icon_description">Person icon</string>
    <string name="user_name">User name</string>
    <string name="password_icon_description">Password icon</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="go_to_registration">Don\'t have an account? Register</string>
    <string name="description_nickname">Nickname</string>
    <string name="description_avatar">Avatar</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="error_auth">Incorrect login or password</string>
    <string name="image_error">Image pick error</string>
    <string name="error_registration">Registration error</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Pick photo</string>
    <string name="select_photo_action">Select action</string>
    <string name="cancel">Cancel</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sign_in">SignIn</string>
    <string name="menu_sign_up">SignUp</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure">Are you sure you want to go out?</string>
    <string name="remove_photo">Remove Photo?</string>
    <string name="are_you_sure_remove_photo">Are you sure you want to delete the photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_post">Add post</string>
    <string name="must_login">You must login</string>
    <string name="need_auth">Authorization required</string>
    <string name="post_text">Post text</string>
    <string name="description_photo">Photo</string>
    <string name="description_remove_photo">Remove photo</string>
    <string name="menu_remove">Remove</string>
    <string name="add_photo">Add photo</string>
    <string name="add_attachment">Add attachment</string>
    <string name="add_users">Add users</string>
    <string name="add_location">Add location</string>
    <string name="empty_posts">There are no posts.</string>
    <string name="remove_error">Remove error</string>
    <string name="save_error">Failed to save post</string>
    <string name="like_error">Like Add Error</string>
    <string name="dislike_error">Dislike Add Error</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="menu_save">menu save</string>
    <string name="menu_clear">menu clear</string>
    <string name="add_post_text">Add post text:</string>
    <string name="add_link">Add a link:</string>
    <string name="link">Link</string>
    <string name="permission_required">Permission required</string>
    <string name="selected_point">Selected point</string>
    <string name="chooser_share_post">Share post</string>
    <string name="participants_button">Participants button</string>
    <string name="empty_events">There are no events</string>
    <string name="participants_error">Error adding participants</string>
    <string name="add_event_text">Add event text</string>
    <string name="event_text">Event text</string>
    <string name="date">Date</string>
    <string name="date_input_type">MM/dd/yyyy HH:mm</string>
    <string name="select_date">Select date and time</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="done">Done</string>
    <string name="add_date_and_type">Add date and type</string>
    <string name="select_event_date">Select event date</string>
    <string name="next">Next</string>
    <string name="select_time">Select time</string>
    <string name="select">Select</string>
    <string name="data_incomplete">Data is incomplete</string>
    <string name="incomplete_event_alert">You cannot create an event without specifying a date, time, or with an empty content.</string>
    <string name="understood">Understood</string>
    <string name="empty_users">There are no users.</string>
    <string name="new_post">New post</string>
    <string name="new_event">New Event</string>
    <string name="map">Map</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="post">Post</string>
    <string name="event">Event</string>

</resources>