<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing">

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_input_type"
        app:endIconContentDescription="@string/select_date"
        app:endIconDrawable="@drawable/ic_calendar_month_24"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/type"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_input_layout" />

    <RadioGroup
        android:id="@+id/type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_label">

        <RadioButton
            android:id="@+id/online_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online" />

        <RadioButton
            android:id="@+id/offline_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>