<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="@dimen/common_spacing"
        app:boxStrokeColor="@color/selector_text_input"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/sign_in_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/person_icon_description"
        app:startIconDrawable="@drawable/ic_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="student"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:boxStrokeColor="@color/selector_text_input"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/sign_in_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout"
        app:startIconContentDescription="@string/password_icon_description"
        app:startIconDrawable="@drawable/ic_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="secret"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <TextView
        android:id="@+id/need_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_common_spacing"
        android:clickable="true"
        android:text="@string/go_to_registration"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

    <ProgressBar
        android:id="@+id/progress_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>